add contact info

--- a/index.html
+++ b/index.html
@@ -20,41 +20,52 @@
     </h1>
     
     <!-- My Image -->
-    <img src="./assets/images/Hnin Nu Hlaing.jpg" alt="my-photo" class="myimage" id="mybio">
+    <div class="img-shape">
+        <img src="./assets/images/Hnin Nu Hlaing.jpg" alt="my-photo" class="myimage" id="mybio">
+    </div>
 
     <!-- About Me -->
     <p class="aboutme">
-        <i class="fa-regular fa-pen-to-square mypen"></i>
+        <i class="fa-solid fa-pen-nib mypen"></i>
     </p>
 
     <!-- Contact Me  -->
     
     <div class="mycontact">
         <p class="contact-info">
-           <a href="#">
-                <i class="fa-regular fa-paper-plane email"></i>
+           <a href="mailto:">
+                <i class="fa-regular fa-paper-plane email"></i>sakurayk2002@gmail.com
             </a> 
         </p>
 
         <p class="contact-info">  
-           <a href="#">
-                <i class="fa-solid fa-map-location-dot address"></i>
+           <a href="http://">
+                <i class="fa-solid fa-map-location-dot address"></i>123, Sample Dr,
+                    New York, USA</i>
             </a>
         </p>
 
         <p class="contact-info">
-            <a href="#">
-                <i class="fa-solid fa-phone-volume telephone"></i>
+            <a href="tel:++">
+                <i class="fa-solid fa-phone-volume telephone"></i>(973) 123-4567
             </a>
         </p>
 
         <p class="contact-info">
-            <a href="#">
-                <i class="fa-brands fa-github github"></i>
+            <a href="https://www.google.com">
+                <i class="fa-brands fa-github github"></i>https://sample@github.com/testing
             </a>
         </p>
     </div>
 
+    <!-- footer -->
+    <footer>
+        <p>
+            Made with <i class="fa-regular fa-heart" style="color: rgb(15, 139, 211)"></i> by <span>Hnin Nu</span>, 2024
+        </p>
+    </footer>
+
+    <!-- javascript link -->
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
